fix navbar spacing for mobile

--- a/CSS/Mouse.css
+++ b/CSS/Mouse.css
@@ -1,10 +1,14 @@
-               
-#navcolor{
+#navcolor {
   /* background-color: rgba(255, 148, 148) !important; */
   background-color: rgb(30, 32, 34) !important;
-  font-size: 190%;
+  font-size: 260%;
   font-family: Verdana; 
 }
+/* nav bar spacing */
+.nav-spacing {
+  padding-left: 120px;
+  padding-right: 120px;
+}  
 /* burger menu change color */
 .navbar-toggler-icon {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28203, 98, 7, 1%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e") !important;
@@ -44,10 +48,6 @@ background-color: #000000 !important;
 a{
 text-decoration: none;
 color: #fff;
-}
-/* nav bar spacing */
-.nav-spacing{
-padding: 80px;
 }
 
 /* scroll up */
