--- a/CSS/products.css
+++ b/CSS/products.css
@@ -1,10 +1,14 @@
-
-#navcolor{
+#navcolor {
     /* background-color: rgba(255, 148, 148) !important; */
     background-color: rgb(30, 32, 34) !important;
-    font-size: 150%;
-    font-family: serif;
-}
+    font-size: 260%;
+    font-family: Verdana; 
+  }
+  /* nav bar spacing */
+  .nav-spacing {
+    padding-left: 120px;
+    padding-right: 120px;
+  }  
 .nav-link{
 color: #fff !important;
 }
@@ -23,17 +27,7 @@ background-color: #52616B !important;
 a{
 text-decoration: none;
 }
-/* nav bar spacing */
-.nav-spacing{
-padding: 30px;
-}
-
-
-
-
 /* main */
-
-
 main{
     padding: 15px;
     align-items: center;
@@ -42,17 +36,13 @@ main{
 
     /* flex-wrap: wrap;
     align-items: flex-start;
-    flex-direction: column; */
-
-    
+    flex-direction: column; */   
 }
-
 main .wrap{
     display: grid;
   grid-template-columns: auto auto auto;
   gap: 15px;
 }
-
 .wrap{
     max-width: 1500px;
     align-items: center;
@@ -62,36 +52,26 @@ main .wrap{
 
 .wrap .card{
     /* width: calc(30% - 15px); */ /*for 3 columns only and 1 row */
-
     background:  rgb(30, 32, 34);
     color: #fff;
     border-radius: 3px;
-    
-
-    
     overflow: hidden;
    box-shadow: 4px 4px 10px 0px rgba(0,0,0,0.15);
 }
-
 .wrap .card img{
     width: 100%;
     height: 100%;
     border-radius: 3px;
-
     transition: all 0.3s ease;
-
     object-fit: cover;
 }
-
 .card:hover img{
     transform: scale(1.1);
 }
-
 .wrap .card .content{
     padding: 20px;
     text-align: center;
 }
-
 .content .row .details p{
     font-size: 25px;
     font-weight: 500;
@@ -141,16 +121,11 @@ button:last-child:hover{
     color: rgb(30, 32, 34);
     background-color: #fff;
 }
-
-
-
-
 footer{
     text-align: center;
     border: 2px ;
     padding-top: 50px;
     color: #fff;
     background-color:rgb(30, 32, 34);
-  
 }
 
